--- a/Speed_Detector/speed.css
+++ b/Speed_Detector/speed.css
@@ -76,3 +76,10 @@ h2 {
     font-size: 24px;
     text-align: center;
 }
+
+p {
+    font-weight: bold;
+    padding: 3px 15px;
+    color: black;
+    text-align: center;
+}
